--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,13 @@
         "@emotion/cache": "^11.10.5",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
+        "@fullcalendar/core": "^6.1.4",
+        "@fullcalendar/daygrid": "^6.1.4",
+        "@fullcalendar/interaction": "^6.1.4",
+        "@fullcalendar/list": "^6.1.4",
+        "@fullcalendar/react": "^6.1.4",
+        "@fullcalendar/timegrid": "^6.1.4",
+        "@fullcalendar/timeline": "^6.1.4",
         "@hookform/resolvers": "^2.9.10",
         "@mui/icons-material": "^5.11.0",
         "@mui/lab": "^5.0.0-alpha.115",
@@ -20,9 +27,11 @@
         "axios-mock-adapter": "^1.21.2",
         "chance": "^1.1.11",
         "csstype": "^3.1.1",
+        "date-fns": "^2.29.3",
         "firebase": "^9.15.0",
         "formik": "^2.2.9",
         "framer-motion": "^8.4.2",
+        "fullcalendar": "^6.1.4",
         "jwt-decode": "^3.1.2",
         "lodash": "^4.17.21",
         "material-ui-popup-state": "^5.0.4",
