--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
-ACCESS_TOKEN_SECRET=123
-REFRESH_TOKEN_SECRET=123
+PORT = 3001
+ACCESS_TOKEN_SECRET = jsfgfjguwrg8783wgbjs849h2fu3cnsvh8wyr8fhwfvi2g225
+REFRESH_TOKEN_SECRET = 825y8i3hnfjmsbv7gwajbl7fobqrjfvbs7gbfj2q3bgh8f42
 JWT_TOKEN_EXPIRATION = 1h
