--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
         "@reduxjs/toolkit": "^1.9.1",
         "@tabler/icons": "^1.119.0",
         "axios": "1.2.1",
+        "axios-debug-log": "^1.0.0",
         "axios-mock-adapter": "^1.21.2",
         "chance": "^1.1.11",
         "csstype": "^3.1.1",
