--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "test": "jest"
+},
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -20,5 +20,8 @@
     "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1"
+  },
+  "devDependencies": {
+    "supertest": "^6.3.3"
   }
 }
