--- a/front/package.json
+++ b/front/package.json
@@ -43,6 +43,7 @@
         "react-app-rewired": "^2.2.1",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.42.0",
+        "react-hot-toast": "^2.4.1",
         "react-markdown": "^8.0.4",
         "react-perfect-scrollbar": "^1.5.8",
         "react-redux": "^8.0.5",
