--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/server.js",
     "test": "jest"
-},
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -22,6 +22,9 @@
     "multer-s3": "^3.0.1"
   },
   "devDependencies": {
-    "supertest": "^6.3.3"
+    "bcryptjs": "^2.4.3",
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0"
   }
 }
